outputs/tsp_aco-aco/2026-03-16_14-32-24/problem_iter4_response0.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 139
    alt_cost_j = sorted_j[0] if len(sorted_j) > 0 than 0 else 0
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expected 'else' after 'if' expression
